--- a/css/styles.css
+++ b/css/styles.css
@@ -36,7 +36,7 @@ body{
 }
 .navbar-light .navbar-nav .nav-link:hover {
   color: #fff;
-  border-bottom: 2px solid #;
+  border-bottom: 2px solid #fff;
 }
 .ml-auto{
   text-align: center;
